Added Ch01 exercises

--- a/Ch01/3.Misc_Graphs.ipynb
+++ b/Ch01/3.Misc_Graphs.ipynb
@@ -87,12 +87,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "df2 = \n",
-    "df2 = df2"
+    "df2 = df2@tf.function\n",
+    "def matmul_tf(x, y):\n",
+    "    return tf.matmul(x,y)\n",
+    "\n",
+    "def matmul_np(x, y):\n",
+    "    return np.dot(x,y)\n",
+    "\n",
+    "np.random.seed(4321)\n",
+    "\n",
+    "tf_times, np_times = [],[]\n",
+    "for n in [100, 1000, 5000, 7500, 10000]:\n",
+    "    x = np.random.normal(size=[n,n]).astype('float32')\n",
+    "    y = np.random.normal(size=[n,n]).astype('float32')\n",
+    "    \n",
+    "    res_tf = %timeit -o matmul_tf(x,y)\n",
+    "    res_np = %timeit -o matmul_np(x,y)\n",
+    "    tf_times.append(res_tf)\n",
+    "    np_times.append(res_np)"
    ]
   },
   {
@@ -100,7 +127,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.rcParams.update({'legend.fontsize': 24})\n",
+    "plt.rcParams.update({'axes.titlesize': 24})\n",
+    "plt.rcParams.update({'axes.labelsize': 22})\n",
+    "plt.rcParams.update({'xtick.labelsize': 22})\n",
+    "plt.rcParams.update({'ytick.labelsize': 22})\n",
+    "#plt.rcParams.update({'ytick.titlesize': 20})\n",
+    "%matplotlib inline\n",
+    "\n",
+    "tf_data = [t.best for t in tf_times]\n",
+    "np_data = [n.best for n in np_times]\n",
+    "\n",
+    "df = pd.DataFrame({\"TensorFlow\": tf_data, \"Numpy\": np_data})\n",
+    "df.index = [100, 1000, 5000, 7500, 10000]\n",
+    "\n",
+    "_, axes = plt.subplots(1, 2, figsize=(24,8))\n",
+    "df.plot.bar(color=['b','r'], rot=45, ax=axes[0])\n",
+    "axes[0].set_xlabel('Array Size')\n",
+    "axes[0].set_ylabel('Seconds')\n",
+    "axes[0].set_title(\"Time Comparison in Seconds (TensorFlow vs Numpy)\")\n",
+    "axes[0].title.set_position([.5, 1.05])\n",
+    "\n",
+    "(df.Numpy/df.TensorFlow).plot.bar(color=['green'], rot=45, ax=axes[1])\n",
+    "axes[1].set_xlabel('Array Size')\n",
+    "axes[1].set_ylabel('Time(Numpy)/Time(TensorFlow) ratio')\n",
+    "axes[1].set_title(\"Numpy/TensorFlow Time Comparison\")\n",
+    "axes[1].title.set_position([.5, 1.05])"
+   ]
   }
  ],
  "metadata": {
