Added Ch03 notebooks

--- a/Ch02/1.Tensorflow_Fundamentals.ipynb
+++ b/Ch02/1.Tensorflow_Fundamentals.ipynb
@@ -142,9 +142,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([4. 4. 4. 4.], shape=(4,), dtype=float32)\n",
+      "tf.Tensor([2. 2. 2. 2.], shape=(4,), dtype=float32)\n",
+      "tf.Tensor([6. 6. 6. 6.], shape=(4,), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[False False  True]\n",
+      " [False False False]], shape=(2, 3), dtype=bool)\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -153,27 +166,89 @@
     "\n",
     "a = tf.constant(4, shape=[4], dtype='float32')\n",
     "b = tf.constant(2, shape=[4], dtype='float32')\n",
-    "\n",
+    "print(a)\n",
+    "print(b)\n",
     "# Arithmatic operations\n",
     "\n",
     "c = a + b  # Addition\n",
+    "print(c)\n",
     "d = a - b  # Subtraction\n",
     "e = a * b  # Multiplication\n",
     "f = a / b  # Division\n",
     "\n",
     "# Logical operations\n",
     "\n",
+    "a = tf.constant([[1,2,3],[4,5,6]])\n",
+    "b = tf.constant([[5,4,3],[3,2,1]])\n",
+    "\n",
     "equal_check = (a == b) # Element-wise equality\n",
+    "print(equal_check)\n",
     "leq_check = (a <= b) # Element-wise less than or equal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[[-0.7665215   0.9611947   1.456347  ]\n",
+      "  [-0.52979267 -0.2647674  -0.57217133]\n",
+      "  [-0.7511135   2.2282166   0.6573406 ]\n",
+      "  [-1.1323775   0.3301812   0.1310132 ]]\n",
+      "\n",
+      " [[ 0.8014518  -1.462713   -1.4113897 ]\n",
+      "  [-1.6531237  -0.14342971  0.51649004]\n",
+      "  [ 1.2800875  -1.2251385  -0.77911323]\n",
+      "  [-0.12907887  0.5554081   0.41840178]]\n",
+      "\n",
+      " [[ 0.3293098   1.140024   -0.00801868]\n",
+      "  [ 0.7699546  -1.3530449  -0.65235037]\n",
+      "  [-1.6503361   0.98659414  1.746369  ]\n",
+      "  [-0.29749674  0.36506456 -1.4723392 ]]\n",
+      "\n",
+      " [[ 0.5332363  -1.6245098  -1.3576707 ]\n",
+      "  [-0.76749927  0.28458712 -1.3440554 ]\n",
+      "  [-0.9872801  -1.0518827  -0.35707638]\n",
+      "  [-1.2846583   1.9658499   0.16300984]]\n",
+      "\n",
+      " [[ 0.42760614  0.17308706 -0.90879506]\n",
+      "  [ 0.5347165   2.569637    1.3013649 ]\n",
+      "  [ 0.95198756 -0.74183583 -1.2316796 ]\n",
+      "  [-0.03830088  1.1367576  -1.2704859 ]]], shape=(5, 4, 3), dtype=float32)\n",
+      "tf.Tensor(-4.504758, shape=(), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[-0.04612858  0.45068324  0.02033644]\n",
+      " [-0.27674386 -0.03757534 -0.33719817]\n",
+      " [-1.4913832  -2.1016302  -0.39335614]\n",
+      " [-0.00213956  0.14960718  0.01671476]], shape=(4, 3), dtype=float32)\n",
+      "tf.Tensor([-1.6531237 -1.6245098 -1.4723392], shape=(3,), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[-1.1323775  -0.2647674  -0.57217133]\n",
+      " [-1.6531237  -1.462713   -1.4113897 ]\n",
+      " [-1.6503361  -1.3530449  -1.4723392 ]\n",
+      " [-1.2846583  -1.6245098  -1.3576707 ]\n",
+      " [-0.03830088 -0.74183583 -1.2704859 ]], shape=(5, 3), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[[-1.1323775  -0.2647674  -0.57217133]]\n",
+      "\n",
+      " [[-1.6531237  -1.462713   -1.4113897 ]]\n",
+      "\n",
+      " [[-1.6503361  -1.3530449  -1.4723392 ]]\n",
+      "\n",
+      " [[-1.2846583  -1.6245098  -1.3576707 ]]\n",
+      "\n",
+      " [[-0.03830088 -0.74183583 -1.2704859 ]]], shape=(5, 1, 3), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "a = tf.constant(np.random.normal(size=[5,4,3]), dtype='float32')\n",
+    "print(a)\n",
     "\n",
     "# Reduction operations\n",
     "red_a1 = tf.reduce_sum(a)\n",
@@ -1118,6 +1193,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plotting the network\n",
+    "\n",
+    "We can plot a network graph of the model we have built as follows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -1136,25 +1220,33 @@
    ],
    "source": [
     "import tensorflow as tf\n",
-    "tf.keras.utils.plot_model(model, show_shapes=True)\n",
+    "tf.keras.utils.plot_model(model, show_shapes=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sub-classing API\n",
     "\n",
-    "#, to_file='model.png', show_shapes=True, show_layer_names=True,\n",
-    "#    rankdir='TB', expand_nested=False, dpi=96\n",
-    "#)\n"
+    "The sub-classing API is considered the hardest to wield, as it requires creating a Python class for the layer or model you want to sub-class. But the added benefit is that you can implement custom computations as sub-classed objects and reuse them in a very convenient manner to create complex models.\n",
+    "\n",
+    "In this exercise, we are creating a custom version of the `Dense` layer which has a multiplicative bias in addition to the additive bias. In other words, we will be implementing a new layer called `MulBiasDense` which does the following computation.\n",
+    "\n",
+    "$h = \\text{Activation}(xW + b \\times b_{mul})$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sub-classing API"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Defining the custom layer"
+    "#### Defining the custom layer\n",
+    "\n",
+    "Here we define the new custom layer. This layer has three parameters (i.e. `w`, `b` and `b_mul`). When defining the new layer we need to define three important functions.\n",
+    "\n",
+    "* `__init__`\n",
+    "* `build`\n",
+    "* `call`"
    ]
   },
   {
@@ -1193,7 +1285,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Defining the model"
+    "#### Defining the model\n",
+    "\n",
+    "Here we define the model using the `MulBiasDense` layer we just created."
    ]
   },
   {
@@ -1249,7 +1343,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Training the model"
+    "#### Training the model\n",
+    "\n",
+    "We are training the model using a batch size of 64 for 10 epochs."
    ]
   },
   {
