--- a/Ch02/2.Creating_Input_Pipelines.ipynb
+++ b/Ch02/2.Creating_Input_Pipelines.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +26,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Downloading data\n",
+    "## Using the `tf.data` API to retrieve data\n",
     "\n",
-    "Download the dataset from https://www.kaggle.com/olgabelitskaya/flower-color-images/data and place it in the `data` folder in the `ch1` folder."
+    "Here we will be using the `tf.data` API to feed a dataset containing images of flowers. The dataset has a folder containing the images and a CSV file listing filenames and their corresponding label as an integer. We will write a TensorFlow data pipeline that does the following.\n",
+    "\n",
+    "* Extract filenames and classes from the CSV\n",
+    "* Read in the images from the extracted filenames and resize them to 64x64\n",
+    "* Convert the class labels to one-hot encoded vectors\n",
+    "* Combine the processed images and one-hot encoded vectors to a single dataset\n",
+    "* Finally, shuffle the data and output as batches\n",
+    "\n",
+    "### Downloading the data\n",
+    "The dataset is available at https://www.kaggle.com/olgabelitskaya/flower-color-images/data . \n",
+    "\n",
+    "You need to download the zip file available in this URL and place it in the `data` folder in the `Ch02` folder."
    ]
   },
   {
@@ -32,44 +50,19 @@
    "source": [
     "from zipfile import ZipFile\n",
     "\n",
-    "zfile = ZipFile('data/flower-color-images.zip')\n",
-    "zfile.extractall('data')"
+    "if os.path.exists('data/flower-color-images.zip'):\n",
+    "    zfile = ZipFile('data/flower-color-images.zip')\n",
+    "    zfile.extractall('data')\n",
+    "else:\n",
+    "    print(\"Did you download the dataset as a zip file and place it in the Ch02/data folder?\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def decode_img(img):\n",
-    "  img = tf.io.read_file(file_path)\n",
-    "  # convert the compressed string to a 3D uint8 tensor\n",
-    "  img = tf.image.decode_jpeg(img, channels=3)\n",
-    "  # Use `convert_image_dtype` to convert to floats in the [0,1] range.\n",
-    "  img = tf.image.convert_image_dtype(img, tf.float32)\n",
-    "  # resize the image to the desired size.\n",
-    "  return tf.image.resize(img, [IMG_WIDTH, IMG_HEIGHT])\n",
-    "\n",
-    "\n",
-    "def process_path(file_path):\n",
-    "  label = get_label(file_path)\n",
-    "  # load the raw data from the file as a string\n",
-    "  img = tf.io.read_file(file_path)\n",
-    "  img = decode_img(img)\n",
-    "  return img, label\n",
-    "\n",
-    "\n"
+    "## Creating a tf.data.Dataset "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -123,6 +116,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining and training a model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -137,16 +137,17 @@
     "    Dense(10, activation='softmax')\n",
     "])\n",
     "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
-    "\n"
+    "\n",
+    "model.fit(data_ds, epochs=100)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "model.fit(data_ds, epochs=100)"
+    "## Using Keras data generators to retrieve data\n",
+    "\n",
+    "### Restructuring the data in the folder"
    ]
   },
   {
@@ -176,41 +177,12 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import shutil\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "\n",
-    "data_dir = os.path.join('data','flower_images')\n",
-    "src_dir = os.path.join(data_dir, 'flower_images')\n",
-    "dst_dir = os.path.join(data_dir, 'flower_images_keras')\n",
-    "\n",
-    "# Copy the original data to a separate director\n",
-    "if not os.path.exists(dst_dir):\n",
-    "    shutil.copytree(src_dir, dst_dir)\n",
-    "    \n",
-    "# Read the labels CSV file as this contains label information\n",
-    "labels_df = pd.read_csv(os.path.join(dst_dir, 'flower_labels.csv'), header=0)\n",
-    "\n",
-    "def restructure(ser):\n",
-    "    \"\"\" \n",
-    "    This function restructures the data in the folder. \n",
-    "    So that a folder representing each label is created. \n",
-    "    And the images with a given label are copied to that folder.\n",
-    "    \"\"\"\n",
-    "    fname,label = ser[\"file\"], ser[\"label\"]\n",
-    "    # If the file already exists, do nothing\n",
-    "    if os.path.exists(os.path.join(dst_dir, fname)):\n",
-    "        # If the label folder is not there, create it\n",
-    "        if not os.path.exists(os.path.join(dst_dir,str(label))):\n",
-    "            os.makedirs(os.path.join(dst_dir,str(label)))\n",
-    "            \n",
-    "        # Move the images within the new data folder to correct subfolder\n",
-    "        shutil.move(os.path.join(dst_dir, fname),os.path.join(dst_dir,str(label),fname))\n",
-    "        \n",
-    "# Perform the above function across all entries\n",
-    "labels_df.apply(lambda x: restructure(x), axis=1)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -346,6 +318,13 @@
     "for item in gen_iter:\n",
     "    print(item)\n",
     "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using the `tensorflow-datasets` library"
    ]
   },
   {
@@ -1111,13 +1090,7 @@
       "3125/3125 [==============================] - 19s 6ms/step - loss: 1.6920 - acc: 0.3864\n",
       "Epoch 81/100\n",
       "3125/3125 [==============================] - 19s 6ms/step - loss: 1.6941 - acc: 0.3856\n",
-      "Epoch 82/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 82/100\n",
       "3125/3125 [==============================] - 19s 6ms/step - loss: 1.6665 - acc: 0.3865\n",
       "Epoch 83/100\n",
       "3125/3125 [==============================] - 19s 6ms/step - loss: 1.6388 - acc: 0.3916\n",
