--- a/Ch03/1.Fully_connected_networks.ipynb
+++ b/Ch03/1.Fully_connected_networks.ipynb
@@ -17,12 +17,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the MNIST data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm_x_train = ((x_train - 128.0)/128.0).reshape([-1,784])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting a small sample and plotting the data"
    ]
   },
   {
@@ -75,6 +98,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the autoencoder model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -103,8 +133,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "K.clear_session()\n",
     "\n",
     "autoencoder = models.Sequential(\n",
@@ -118,12 +146,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "norm_x_train = ((x_train - 128.0)/128.0).reshape([-1,784])"
+    "## Training the model"
    ]
   },
   {
@@ -161,6 +187,13 @@
    ],
    "source": [
     "history = autoencoder.fit(norm_x_train, norm_x_train, batch_size=64, epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting the loss over time"
    ]
   },
   {
