--- a/Ch03/3.Recurrent_networks.ipynb
+++ b/Ch03/3.Recurrent_networks.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading the data "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -116,6 +123,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting CO2 concentration over time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -145,6 +159,13 @@
    ],
    "source": [
     "plt.plot(data[[\"Average\"]]).plot(figsize=(12,6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating the `Average Diff` column"
    ]
   },
   {
@@ -279,6 +300,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating time-series data for the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -321,68 +349,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:AutoGraph could not transform <function <lambda> at 0x00000282E3483F28> and will run it as-is.\n",
-      "Cause: could not parse the source code:\n",
-      "\n",
-      "    .flat_map(lambda x: x.batch(13))\\\n",
-      "    .map(lambda x: get_xy(x))\\\n",
-      "    .shuffle(batch_size*2)\\\n",
-      "    .batch(batch_size)\n",
-      "\n",
-      "This error may be avoided by creating the lambda in a standalone statement.\n",
-      "\n",
-      "WARNING: AutoGraph could not transform <function <lambda> at 0x00000282E3483F28> and will run it as-is.\n",
-      "Cause: could not parse the source code:\n",
-      "\n",
-      "    .flat_map(lambda x: x.batch(13))\\\n",
-      "    .map(lambda x: get_xy(x))\\\n",
-      "    .shuffle(batch_size*2)\\\n",
-      "    .batch(batch_size)\n",
-      "\n",
-      "This error may be avoided by creating the lambda in a standalone statement.\n",
-      "\n",
-      "WARNING:tensorflow:AutoGraph could not transform <function <lambda> at 0x00000282E1FF3268> and will run it as-is.\n",
-      "Cause: could not parse the source code:\n",
-      "\n",
-      "    .map(lambda x: get_xy(x))\\\n",
-      "    .shuffle(batch_size*2)\\\n",
-      "    .batch(batch_size)\n",
-      "\n",
-      "This error may be avoided by creating the lambda in a standalone statement.\n",
-      "\n",
-      "WARNING: AutoGraph could not transform <function <lambda> at 0x00000282E1FF3268> and will run it as-is.\n",
-      "Cause: could not parse the source code:\n",
-      "\n",
-      "    .map(lambda x: get_xy(x))\\\n",
-      "    .shuffle(batch_size*2)\\\n",
-      "    .batch(batch_size)\n",
-      "\n",
-      "This error may be avoided by creating the lambda in a standalone statement.\n",
-      "\n",
-      "Tensor(\"args_0:0\", shape=(None,), dtype=float64)\n"
-     ]
-    }
-   ],
    "source": [
-    "def get_xy(x):\n",
-    "    print(x)\n",
-    "    return (tf.expand_dims(x[:-1],-1), x[-1:])\n",
-    "\n",
-    "batch_size = 32\n",
-    "d = tf.data.Dataset.from_tensor_slices(data[\"Average Diff\"].values)\\\n",
-    "    .window(13,1, drop_remainder=True)\\\n",
-    "    .flat_map(lambda x: x.batch(13))\\\n",
-    "    .map(lambda x: get_xy(x))\\\n",
-    "    .shuffle(batch_size*2)\\\n",
-    "    .batch(batch_size)\n"
+    "## Defining and training the model "
    ]
   },
   {
@@ -474,8 +444,14 @@
     }
    ],
    "source": [
-    "print(x.shape)\n",
     "rnn.fit(x, y, shuffle=True, batch_size=64, epochs=25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predicting using the trained model"
    ]
   },
   {
@@ -501,7 +477,14 @@
     "    true_vals.append(prev_true+p_diff[0,0,0])\n",
     "    prev_true = true_vals[-1]\n",
     "    \n",
-    "print(true_vals)"
+    "print(\"Predictions: {}\".format(true_vals[:10]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting the current values and predictions "
    ]
   },
   {
@@ -533,8 +516,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "plt.figure(figsize=(16,8))\n",
     "plt.plot(data[\"Average\"], c='r')\n",
     "pred_ser = pd.Series(\n",
